--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,18 @@ android {
 
 
 dependencies {
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+    api 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:mediarouter-v7:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
